--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -23,9 +23,10 @@
     </script>
 
     <!-- include source files here... -->
+    <script type="module" src="src/data/exampleVideoData.js"></script>
     <script type="module" src="compiled/src/config/youtube.js"></script>
     <script type="module" src="compiled/src/lib/searchYouTube.js"></script>
-    <script type="module" src="compiled/src/data/exampleVideoData.js"></script>
+    <!-- <script type="module" src="compiled/src/data/exampleVideoData.js"></script> -->
     <script type="module" src="compiled/src/components/VideoListEntry.js"></script>
     <script type="module" src="compiled/src/components/VideoList.js"></script>
     <script type="module" src="compiled/src/components/VideoPlayer.js"></script>
@@ -33,6 +34,7 @@
     <script type="module" src="compiled/src/components/App.js"></script>
 
     <!-- include spec files here... -->
+
     <script type="module" src="compiled/spec/data/fakeVideoData.js"></script>
     <script type="module" src="compiled/spec/data/moreFakeVideoData.js"></script>
     <script type="module" src="compiled/spec/components/Wrapper.js"></script>
